--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
-		"postcss": "^8.4.23",
-		"postcss-load-config": "^4.0.1",
+		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
@@ -36,11 +35,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@popperjs/core": "^2.11.8",
 		"@supabase/auth-helpers-sveltekit": "^0.10.1",
-		"class-variance-authority": "^0.6.0",
-		"clsx": "^1.2.1",
-		"lucide-svelte": "^0.248.0",
-		"tailwind-merge": "^1.13.2",
-		"tailwindcss-animate": "^1.0.6"
+		"@supabase/auth-ui-shared": "^0.1.6",
+		"@supabase/auth-ui-svelte": "^0.2.2",
+		"@supabase/supabase-js": "^2.26.0",
+		"flowbite": "^1.6.6",
+		"flowbite-svelte": "^0.38.5",
+		"tailwind-merge": "^1.13.2"
 	}
 }
