--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.5",
 		"tailwind-merge": "^1.13.2"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"flowbite-svelte@0.38.5": "patches/flowbite-svelte@0.38.5.patch"
+		}
 	}
 }
