--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
 		"@popperjs/core": "^2.11.8",
 		"@supabase/auth-helpers-sveltekit": "^0.10.1",
 		"@supabase/supabase-js": "^2.26.0",
+		"@tensorflow-models/coco-ssd": "^2.2.2",
+		"@tensorflow/tfjs-backend-cpu": "^4.8.0",
+		"@tensorflow/tfjs-backend-webgl": "^4.8.0",
+		"@tensorflow/tfjs-core": "^4.8.0",
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.5",
 		"tailwind-merge": "^1.13.2"
@@ -45,6 +49,11 @@
 	"pnpm": {
 		"patchedDependencies": {
 			"flowbite-svelte@0.38.5": "patches/flowbite-svelte@0.38.5.patch"
+		},
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"@tensorflow/tfjs-core": "4"
+			}
 		}
 	}
 }
